--- a/Build_a_Generative_Adversarial_Network_.ipynb
+++ b/Build_a_Generative_Adversarial_Network_.ipynb
@@ -67,7 +67,7 @@
         "\n",
         "from tqdm.notebook import tqdm"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -84,7 +84,23 @@
       "metadata": {
         "id": "5oUWVmkulOSi"
       },
-      "source": [],
+      "source": [
+        "device = 'cuda'\n",
+        "\n",
+        "batch_size = 128\n",
+        "\n",
+        "noise_dim = 64\n",
+        "\n",
+        "# optimizers parameters\n",
+        "\n",
+        "lr = 0.0002\n",
+        "beta_1 = 0.5\n",
+        "beta_2 = 0.99\n",
+        "\n",
+        "# Training variables\n",
+        "\n",
+        "epochs = 20"
+      ],
       "execution_count": null,
       "outputs": []
     },
@@ -102,8 +118,10 @@
       "metadata": {
         "id": "FA70KkPWlOSj"
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "from torchvision import datasets, transforms as T"
+      ],
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -111,8 +129,13 @@
       "metadata": {
         "id": "4RPRGJDAlOSk"
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "train_augs = T.Compose([\n",
+        "    T.RandomRotation((-20, +20)),\n",
+        "    T.ToTensor() # (h, w, c) -> (c, h, w)\n",
+        "])"
+      ],
+      "execution_count": 7,
       "outputs": []
     },
     {
